BradkenProduction/force-app/main/default/objects/Quote_Status_History__c/Quote_Status_History__c.object-meta.xml
<CustomObject>
    <description>Log every change on quote status</description>
    <label>Quote Status History</label>
    <nameField>
        <displayFormat>QSH-{0}</displayFormat>
        <label>Quote Status History #</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Quote Status Histories</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>