BradkenProduction/force-app/main/default/objects/Quote_Status_History__c/fields/Age__c.field-meta.xml
<CustomField>
    <fullName>Age__c</fullName>
    <description>https://trailhead.salesforce.com/en/content/learn/v/modules/advanced_formulas/date_formulas

in hours = (ChangedDate__c-CreatedDate)*24
in minutes.= (ChangedDate__c-CreatedDate)*24*60
in days = (ChangedDate__c-CreatedDate)</description>
    <formula>(ChangedDate__c-CreatedDate)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Age (days)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>