BradkenProduction/force-app/main/default/objects/Quote_Status_History__c/fields/ChangedDate__c.field-meta.xml
<CustomField>
    <fullName>ChangedDate__c</fullName>
    <defaultValue>NOW()</defaultValue>
    <label>ChangedDate</label>
    <type>DateTime</type>
</CustomField>