BradkenProduction/force-app/main/default/objects/Quote_Status_History__c/fields/New_Value__c.field-meta.xml
<CustomField>
    <fullName>New_Value__c</fullName>
    <description>New Value ( changed To)</description>
    <inlineHelpText>New Value ( changed To)</inlineHelpText>
    <label>New Value</label>
    <length>100</length>
    <type>Text</type>
</CustomField>