BradkenProduction/force-app/main/default/objects/Quote_Status_History__c/fields/Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Quote Status Histories</relationshipLabel>
    <relationshipName>Quote_Status_Histories</relationshipName>
    <type>Lookup</type>
</CustomField>