BradkenProduction/force-app/main/default/objects/Quote_Status_History__c/fields/Owner_s_Region__c.field-meta.xml
<CustomField>
    <fullName>Owner_s_Region__c</fullName>
    <formula>TEXT(Owner:User.Sales_Region__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Owner&apos;s Region</label>
    <type>Text</type>
</CustomField>