BradkenProduction/force-app/main/default/objects/Quote_Status_History__c/fields/Quote__c.field-meta.xml
<CustomField>
    <fullName>Quote__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Quote</label>
    <referenceTo>Quote</referenceTo>
    <relationshipLabel>Quote Status Histories</relationshipLabel>
    <relationshipName>Quote_Status_Histories</relationshipName>
    <type>Lookup</type>
</CustomField>